--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.3.3",
     "nanoid": "^5.0.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "puppeteer": "^22.7.1",
     "puppeteer-cluster": "^0.24.0",
     "puppeteer-extra": "^3.3.6",
